Fixed attachments overflow bug in chats

--- a/src/components/Messaging/ChatMessage.css
+++ b/src/components/Messaging/ChatMessage.css
@@ -1,33 +1,9 @@
-.chat__message{
-    position: relative;
-    font-size: 16px;
-    padding: 6px 7px 8px 9px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    margin-bottom: 20px;
-    width: fit-content; /*will dynamically expand based on how much text ther eis in the message*/
-    max-width: calc(200px + 20vw);
-}
-
-.chat__receiver{
-    margin-left: auto;
-    background-color: #dcf8c6;
-}
-
-.chat__receiver .chat__timestamp{
-    margin-left: 10px;
-}
-
 .chat__name{
     white-space: nowrap;
     position: absolute;
     top: -15px;
     font-weight: 700;
     font-size: xx-small;
-}
-
-.chat__messageText{
-    max-width: 280px;
 }
 
 .chat__timestamp{
